# csg_format

./: .env.example  AUTH_README.md  CLAUDE.md  api_endpoints.py  application_formatter.py  config.py  create_token.py  database.py  generate_api_key.py  generate_token.py  grid.py  main.py  models.py  producer_config.json  pyproject.toml  repopack-output.txt  routing_number.py  supp_companies_full.json  utils.py
auth/: __init__.py  auth.py
routes/: auth_routes.py  csg_routes.py  formatter_routes.py
static/: index.html  login.html
