[project]
name = "csg-format"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "jwt>=1.3.1",
    "libsql-experimental>=0.0.41",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.26.1",
    "rapidfuzz>=3.10.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
]
